--- a/User/nielseniq_-_new_-_kor.less
+++ b/User/nielseniq_-_new_-_kor.less
@@ -250,8 +250,8 @@
 @dq-button-text-color-hover:      #343434;
 @dq-button-text-color-selected:   #343434;
 @dq-button-bg-color:              #fff;
-@dq-button-bg-color-hover:        #d6e3ff;
-@dq-button-bg-color-selected:     #d6e3ff;
+@dq-button-bg-color-hover:        #b7ceff;
+@dq-button-bg-color-selected:     #b7ceff;
 @dq-button-border-color:          #000000;
 @dq-button-border-color-hover:    #000000;
 @dq-button-border-color-selected: #000000;
@@ -1157,12 +1157,12 @@ form#primary, .exit-message {
 	border-color: #000000 !important;
 	
 	&[data-hovered] {
-    background-color: #d6e3ff !important;
+    background-color: #b7ceff !important;
     
   }
 
   &[data-selected] {
-    background-color: #d6e3ff !important;
+    background-color: #b7ceff !important;
   }
 }
 
@@ -1218,7 +1218,7 @@ form#primary, .exit-message {
 
 .sq-cardsort-buckets .sq-cardsort-bucket.sq-cardsort-state-hovered,
 .sq-cardsort-buckets .sq-cardsort-bucket.sq-cardsort-state-selected {
-	background-color: #d6e3ff !important;
+	background-color: #b7ceff !important;
 }
 
 .selected-row .sq-accordion-header {
