accordion cursor pointer add

--- a/User/nielseniq_-_new_-_kor.less
+++ b/User/nielseniq_-_new_-_kor.less
@@ -1274,6 +1274,10 @@ form#primary, .exit-message {
   max-width: 924px;
 }
 
+.sq-accordion{
+  cursor: pointer;
+}
+
 .sq-accordion-row{
   max-width: 924px !important;
 }
