--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1156,10 +1156,11 @@ form#primary, .exit-message {
 }
 
 .sq-cardrating-button {
-   background-color: #ffffff !important;
-    color: #000 !important;
-	  border-color: #000000 !important;
-	
+  background-color: #ffffff !important;
+  color: #000 !important;
+	border-color: #000000 !important;
+	box-shadow: 0 4px 6px -1px @boxShadowColor, 0 2px 4px -2px @boxShadowColor;
+
 	&[data-hovered] {
     background-color: @custom-sub-color !important;
     
@@ -1226,6 +1227,7 @@ body {
     color: #000 !important;
     font-family: aktiv-grotesk,sans-serif;
     font-size: 1rem;
+    box-shadow: 0 4px 6px -1px @boxShadowColor, 0 2px 4px -2px @boxShadowColor;
 }
 
 .sq-cardsort-buckets .sq-cardsort-bucket.sq-cardsort-state-hovered,
