--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -76,6 +76,7 @@
 @color-6: rgb(1, 157, 218);
 @color-7: #00ff00;
 
+/* KOR custom css */
 @custom-color: #2d6df6;
 @custom-text-color: white;
 @custom-text-color-comp: black;
