--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1915,6 +1915,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
   .ch-group-rows {
     overflow: hidden;
+    overflow-y: auto;
     transition: max-height 0.5s;
   }
 
