--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2016,3 +2016,25 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 
+/* callout */
+.ch-callout {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-top: 20px;
+  border-left : 3px solid @custom-color;
+  padding: 10px;
+  background-color: @custom-sub-color;
+}
+
+.ch-refer {
+  padding: 10px;
+  border : 1px solid @custom-even-color; 
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  .box-shadow-style();
+  margin-bottom: 10px;
+}
+
+.ch-refer-content {
+  font-size: 1.1rem;
+}
