--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1955,6 +1955,14 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
+.hasError {
+  .ch-group-toggle {
+    .ch-group-rows {
+      background-color : @answer-error-highlight-color;
+    }
+  }
+}
+
 
 /* Detail Tag*/
 .ch-showcard {
